Migrated some strings

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -8,16 +8,118 @@
   "@accounts": {},
   "appearance": "Appearance",
   "@appearance": {},
-  "settings": "Settings",
-  "@settings": {},
   "add_instance": "Add instance",
   "@add_instance": {},
-  "username_or_email": "Username or email",
-  "@username_or_email": {},
-  "password": "Password",
-  "@password": {},
   "sign_in": "Sign in",
   "@sign_in": {},
   "register": "Register",
-  "@register": {}
+  "@register": {},
+  "settings": "Settings",
+  "@settings": {},
+  "password": "Password",
+  "@password": {},
+  "email_or_username": "Email or Username",
+  "@email_or_username": {},
+  "posts": "Posts",
+  "@posts": {},
+  "comments": "Comments",
+  "@comments": {},
+  "modlog": "Modlog",
+  "@modlog": {},
+  "community": "Community",
+  "@community": {},
+  "url": "URL",
+  "@url": {},
+  "title": "Title",
+  "@title": {},
+  "body": "Body",
+  "@body": {},
+  "nsfw": "NSFW",
+  "@nsfw": {},
+  "post": "post",
+  "@post": {},
+  "save": "save",
+  "@save": {},
+  "send_message": "Send Message",
+  "@send_message": {},
+  "subscribed": "Subscribed",
+  "@subscribed": {},
+  "local": "Local",
+  "@local": {},
+  "all": "All",
+  "@all": {},
+  "replies": "Replies",
+  "@replies": {},
+  "mentions": "Mentions",
+  "@mentions": {},
+  "from": "from",
+  "@from": {},
+  "to": "to",
+  "@to": {},
+  "deleted_by_creator": "deleted by creator",
+  "@deleted_by_creator": {},
+  "more": "more",
+  "@more": {},
+  "mark_as_read": "mark as read",
+  "@mark_as_read": {},
+  "mark_as_unread": "mark as unread",
+  "@mark_as_unread": {},
+  "reply": "reply",
+  "@reply": {},
+  "edit": "edit",
+  "@edit": {},
+  "delete": "delete",
+  "@delete": {},
+  "restore": "restore",
+  "@restore": {},
+  "yes": "yes",
+  "@yes": {},
+  "no": "no",
+  "@no": {},
+  "avatar": "Avatar",
+  "@avatar": {},
+  "banner": "Banner",
+  "@banner": {},
+  "display_name": "Display name",
+  "@display_name": {},
+  "bio": "Bio",
+  "@bio": {},
+  "email": "Email",
+  "@email": {},
+  "matrix_user": "Matrix User",
+  "@matrix_user": {},
+  "sort_type": "Sort type",
+  "@sort_type": {},
+  "type": "Type",
+  "@type": {},
+  "show_nsfw": "Show NSFW content",
+  "@show_nsfw": {},
+  "send_notifications_to_email": "Send notifications to Email",
+  "@send_notifications_to_email": {},
+  "delete_account": "Delete Account",
+  "@delete_account": {},
+  "saved": "Saved",
+  "@saved": {},
+  "communities": "Communities",
+  "@communities": {},
+  "users": "Users",
+  "@users": {},
+  "theme": "Theme",
+  "@theme": {},
+  "language": "Language",
+  "@language": {},
+  "hot": "Hot",
+  "@hot": {},
+  "new": "New",
+  "@new": {},
+  "old": "Old",
+  "@old": {},
+  "top": "Top",
+  "@top": {},
+  "chat": "Chat",
+  "@chat": {},
+  "admin": "admin",
+  "@admin": {},
+  "by": "by",
+  "@by": {}
 }
