--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -1,5 +1,59 @@
 {
   "@@locale": "pl",
   "add_account": "Dodaj konto",
-  "select_instance": "Wybierz instancje"
+  "select_instance": "Wybierz instancje",
+  "settings": "Ustawienia",
+  "password": "Hasło",
+  "email_or_username": "Email lub Nazwa Użytkownika",
+  "posts": "Posty",
+  "comments": "Komentarze",
+  "modlog": "Log moderatorski",
+  "community": "Społeczność",
+  "url": "URL",
+  "title": "Tytuł",
+  "body": "Treść",
+  "nsfw": "NSFW",
+  "post": "post",
+  "save": "zapisz",
+  "send_message": "Wyślij Wiadomość",
+  "subscribed": "Zasubskrybowane",
+  "local": "Lokalne",
+  "all": "Wszystko",
+  "replies": "Odpowiedzi",
+  "mentions": "Wzmianki",
+  "from": "od",
+  "to": "do",
+  "deleted_by_creator": "usunięte przez autora",
+  "more": "więcej",
+  "mark_as_read": "zaznacz jako przeczytane",
+  "mark_as_unread": "zaznacz jako nieprzeczytane",
+  "reply": "odpowiedz",
+  "edit": "edytuj",
+  "delete": "usuń",
+  "restore": "przywróć",
+  "yes": "tak",
+  "no": "nie",
+  "avatar": "Awatar",
+  "banner": "Banner",
+  "display_name": "Nazwa wyświetlana",
+  "bio": "Opis",
+  "email": "Email",
+  "matrix_user": "Użytkownik Matrixa",
+  "sort_type": "Sortuj typ",
+  "type": "Rodzaj",
+  "show_nsfw": "Pokaż treści NSFW (+18)",
+  "send_notifications_to_email": "Wysyłaj powiadomienia na Email",
+  "delete_account": "Usuń Konto",
+  "saved": "Zapisane",
+  "communities": "Społeczności",
+  "users": "Użytkownicy",
+  "theme": "Motyw",
+  "language": "Język",
+  "hot": "Popularne",
+  "new": "Nowe",
+  "old": "Stare",
+  "top": "Najpopularniejsze",
+  "chat": "Czat",
+  "admin": "administrator",
+  "by": "przez"
 }
