Add empty base languages

--- a/lib/l10n/untranslated.json
+++ b/lib/l10n/untranslated.json
@@ -1,11 +1,793 @@
 {
+  "ar": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "local",
+    "from",
+    "banner",
+    "display_name",
+    "bio"
+  ],
+
+  "ca": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "bio"
+  ],
+
+  "da": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register"
+  ],
+
+  "de": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register"
+  ],
+
+  "el": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register"
+  ],
+
+  "eo": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register"
+  ],
+
+  "es": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register"
+  ],
+
+  "eu": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register"
+  ],
+
+  "fa": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "modlog",
+    "community",
+    "url",
+    "body",
+    "send_message",
+    "subscribed",
+    "local",
+    "from",
+    "to",
+    "more",
+    "banner",
+    "display_name",
+    "bio",
+    "matrix_user",
+    "saved",
+    "theme",
+    "old",
+    "by"
+  ],
+
+  "fi": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "local",
+    "banner",
+    "display_name",
+    "bio"
+  ],
+
+  "fr": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register"
+  ],
+
+  "ga": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register"
+  ],
+
+  "gl": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "settings",
+    "password",
+    "email_or_username",
+    "posts",
+    "comments",
+    "modlog",
+    "community",
+    "url",
+    "title",
+    "body",
+    "nsfw",
+    "post",
+    "save",
+    "send_message",
+    "subscribed",
+    "local",
+    "all",
+    "replies",
+    "mentions",
+    "from",
+    "to",
+    "deleted_by_creator",
+    "more",
+    "mark_as_read",
+    "mark_as_unread",
+    "reply",
+    "edit",
+    "delete",
+    "restore",
+    "yes",
+    "no",
+    "avatar",
+    "banner",
+    "display_name",
+    "bio",
+    "email",
+    "matrix_user",
+    "sort_type",
+    "type",
+    "show_nsfw",
+    "send_notifications_to_email",
+    "delete_account",
+    "saved",
+    "communities",
+    "users",
+    "theme",
+    "language",
+    "hot",
+    "new",
+    "old",
+    "top",
+    "chat",
+    "admin",
+    "by"
+  ],
+
+  "hi": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "password",
+    "email_or_username",
+    "modlog",
+    "url",
+    "title",
+    "body",
+    "nsfw",
+    "save",
+    "subscribed",
+    "local",
+    "all",
+    "replies",
+    "mentions",
+    "from",
+    "to",
+    "deleted_by_creator",
+    "mark_as_read",
+    "mark_as_unread",
+    "delete",
+    "restore",
+    "yes",
+    "no",
+    "banner",
+    "display_name",
+    "bio",
+    "email",
+    "matrix_user",
+    "sort_type",
+    "type",
+    "show_nsfw",
+    "send_notifications_to_email",
+    "delete_account",
+    "saved",
+    "theme",
+    "language",
+    "hot",
+    "new",
+    "old",
+    "top",
+    "chat",
+    "by"
+  ],
+
+  "hr": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "settings",
+    "password",
+    "email_or_username",
+    "posts",
+    "comments",
+    "modlog",
+    "community",
+    "url",
+    "title",
+    "body",
+    "nsfw",
+    "post",
+    "save",
+    "send_message",
+    "subscribed",
+    "local",
+    "all",
+    "replies",
+    "mentions",
+    "from",
+    "to",
+    "deleted_by_creator",
+    "more",
+    "mark_as_read",
+    "mark_as_unread",
+    "reply",
+    "edit",
+    "delete",
+    "restore",
+    "yes",
+    "no",
+    "avatar",
+    "banner",
+    "display_name",
+    "bio",
+    "email",
+    "matrix_user",
+    "sort_type",
+    "type",
+    "show_nsfw",
+    "send_notifications_to_email",
+    "delete_account",
+    "saved",
+    "communities",
+    "users",
+    "theme",
+    "language",
+    "hot",
+    "new",
+    "old",
+    "top",
+    "chat",
+    "admin",
+    "by"
+  ],
+
+  "hu": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "local",
+    "banner",
+    "display_name",
+    "bio"
+  ],
+
+  "it": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register"
+  ],
+
+  "ja": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "local"
+  ],
+
+  "ka": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "local",
+    "banner",
+    "display_name",
+    "bio"
+  ],
+
+  "km": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "settings",
+    "password",
+    "email_or_username",
+    "posts",
+    "comments",
+    "modlog",
+    "community",
+    "url",
+    "title",
+    "body",
+    "nsfw",
+    "post",
+    "save",
+    "send_message",
+    "subscribed",
+    "local",
+    "all",
+    "replies",
+    "mentions",
+    "from",
+    "to",
+    "deleted_by_creator",
+    "more",
+    "mark_as_read",
+    "mark_as_unread",
+    "reply",
+    "edit",
+    "delete",
+    "restore",
+    "yes",
+    "no",
+    "avatar",
+    "banner",
+    "display_name",
+    "bio",
+    "email",
+    "matrix_user",
+    "sort_type",
+    "type",
+    "show_nsfw",
+    "send_notifications_to_email",
+    "delete_account",
+    "saved",
+    "communities",
+    "users",
+    "theme",
+    "language",
+    "hot",
+    "new",
+    "old",
+    "top",
+    "chat",
+    "admin",
+    "by"
+  ],
+
+  "ko": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register"
+  ],
+
+  "nl": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "local",
+    "banner",
+    "display_name",
+    "bio"
+  ],
+
+  "oc": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "settings",
+    "password",
+    "email_or_username",
+    "posts",
+    "comments",
+    "modlog",
+    "community",
+    "url",
+    "title",
+    "body",
+    "nsfw",
+    "post",
+    "save",
+    "send_message",
+    "subscribed",
+    "local",
+    "all",
+    "replies",
+    "mentions",
+    "from",
+    "to",
+    "deleted_by_creator",
+    "more",
+    "mark_as_read",
+    "mark_as_unread",
+    "reply",
+    "edit",
+    "delete",
+    "restore",
+    "yes",
+    "no",
+    "avatar",
+    "banner",
+    "display_name",
+    "bio",
+    "email",
+    "matrix_user",
+    "sort_type",
+    "type",
+    "show_nsfw",
+    "send_notifications_to_email",
+    "delete_account",
+    "saved",
+    "communities",
+    "users",
+    "theme",
+    "language",
+    "hot",
+    "new",
+    "old",
+    "top",
+    "chat",
+    "admin",
+    "by"
+  ],
+
   "pl": [
     "accounts",
     "appearance",
-    "settings",
     "add_instance",
-    "username_or_email",
+    "sign_in",
+    "register"
+  ],
+
+  "pt": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "settings",
     "password",
+    "email_or_username",
+    "posts",
+    "comments",
+    "modlog",
+    "community",
+    "url",
+    "title",
+    "body",
+    "nsfw",
+    "post",
+    "save",
+    "send_message",
+    "subscribed",
+    "local",
+    "all",
+    "replies",
+    "mentions",
+    "from",
+    "to",
+    "deleted_by_creator",
+    "more",
+    "mark_as_read",
+    "mark_as_unread",
+    "reply",
+    "edit",
+    "delete",
+    "restore",
+    "yes",
+    "no",
+    "avatar",
+    "banner",
+    "display_name",
+    "bio",
+    "email",
+    "matrix_user",
+    "sort_type",
+    "type",
+    "show_nsfw",
+    "send_notifications_to_email",
+    "delete_account",
+    "saved",
+    "communities",
+    "users",
+    "theme",
+    "language",
+    "hot",
+    "new",
+    "old",
+    "top",
+    "chat",
+    "admin",
+    "by"
+  ],
+
+  "pt_BR": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register"
+  ],
+
+  "ru": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register"
+  ],
+
+  "sq": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "local",
+    "banner",
+    "display_name",
+    "bio"
+  ],
+
+  "sr": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "settings",
+    "password",
+    "email_or_username",
+    "posts",
+    "comments",
+    "modlog",
+    "community",
+    "url",
+    "title",
+    "body",
+    "nsfw",
+    "post",
+    "save",
+    "send_message",
+    "subscribed",
+    "local",
+    "all",
+    "replies",
+    "mentions",
+    "from",
+    "to",
+    "deleted_by_creator",
+    "more",
+    "mark_as_read",
+    "mark_as_unread",
+    "reply",
+    "edit",
+    "delete",
+    "restore",
+    "yes",
+    "no",
+    "avatar",
+    "banner",
+    "display_name",
+    "bio",
+    "email",
+    "matrix_user",
+    "sort_type",
+    "type",
+    "show_nsfw",
+    "send_notifications_to_email",
+    "delete_account",
+    "saved",
+    "communities",
+    "users",
+    "theme",
+    "language",
+    "hot",
+    "new",
+    "old",
+    "top",
+    "chat",
+    "admin",
+    "by"
+  ],
+
+  "sr_Latn": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "settings",
+    "email_or_username",
+    "posts",
+    "comments",
+    "modlog",
+    "title",
+    "post",
+    "save",
+    "send_message",
+    "subscribed",
+    "local",
+    "all",
+    "replies",
+    "mentions",
+    "deleted_by_creator",
+    "more",
+    "mark_as_read",
+    "mark_as_unread",
+    "reply",
+    "edit",
+    "delete",
+    "restore",
+    "avatar",
+    "banner",
+    "display_name",
+    "bio",
+    "sort_type",
+    "type",
+    "delete_account",
+    "saved",
+    "communities",
+    "users",
+    "hot",
+    "new",
+    "old",
+    "top",
+    "admin"
+  ],
+
+  "sv": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register"
+  ],
+
+  "tr": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "local",
+    "banner",
+    "display_name",
+    "bio"
+  ],
+
+  "uk": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
+    "sign_in",
+    "register",
+    "local",
+    "banner",
+    "display_name",
+    "bio"
+  ],
+
+  "zh": [
+    "add_account",
+    "select_instance",
+    "accounts",
+    "appearance",
+    "add_instance",
     "sign_in",
     "register"
   ]
