Rename new because of keyword conflict

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -43,7 +43,7 @@
   "theme": "المظهر",
   "language": "اللغة",
   "hot": "المتداولة",
-  "new": "جديد",
+  "new_": "جديد",
   "old": "قديم",
   "top": "المتداولة",
   "chat": "دردشة",
