--- a/lib/l10n/intl_ca.arb
+++ b/lib/l10n/intl_ca.arb
@@ -47,7 +47,7 @@
   "theme": "Tema",
   "language": "Llengua",
   "hot": "Popular",
-  "new": "Nou",
+  "new_": "Nou",
   "old": "Antic",
   "top": "Millor",
   "chat": "Xat",
