--- a/lib/l10n/intl_da.arb
+++ b/lib/l10n/intl_da.arb
@@ -48,7 +48,7 @@
   "theme": "Tema",
   "language": "Sprog",
   "hot": "Hot",
-  "new": "New",
+  "new_": "New",
   "old": "Old",
   "top": "Top",
   "chat": "Chat",
