--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -48,7 +48,7 @@
   "theme": "Aussehen",
   "language": "Sprache",
   "hot": "Heiß",
-  "new": "Neu",
+  "new_": "Neu",
   "old": "Alt",
   "top": "Top",
   "chat": "Chat",
