--- a/lib/l10n/intl_el.arb
+++ b/lib/l10n/intl_el.arb
@@ -48,7 +48,7 @@
   "theme": "Θέμα",
   "language": "Γλώσσα",
   "hot": "Δημοφιλία",
-  "new": "Φρεσκάδα",
+  "new_": "Φρεσκάδα",
   "old": "Παλιά",
   "top": "Κορυφαία",
   "chat": "Συνομιλία",
