--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -110,8 +110,8 @@
   "@language": {},
   "hot": "Hot",
   "@hot": {},
-  "new": "New",
-  "@new": {},
+  "new_": "New",
+  "@new_": {},
   "old": "Old",
   "@old": {},
   "top": "Top",
