--- a/lib/l10n/intl_eo.arb
+++ b/lib/l10n/intl_eo.arb
@@ -48,7 +48,7 @@
   "theme": "Haŭto",
   "language": "Lingvo",
   "hot": "Furoraj",
-  "new": "Novaj",
+  "new_": "Novaj",
   "old": "Malnovaj",
   "top": "Supraj",
   "chat": "Babilo",
