--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -48,7 +48,7 @@
   "theme": "Tema",
   "language": "Idioma",
   "hot": "Popular",
-  "new": "Nuevo",
+  "new_": "Nuevo",
   "old": "Antiguo",
   "top": "Lo mejor",
   "chat": "Chat",
