--- a/lib/l10n/intl_eu.arb
+++ b/lib/l10n/intl_eu.arb
@@ -48,7 +48,7 @@
   "theme": "Itxura",
   "language": "Hizkuntza",
   "hot": "Pil-pilean",
-  "new": "Berriak",
+  "new_": "Berriak",
   "old": "Zaharrak",
   "top": "Bozkatuenak",
   "chat": "Txata",
