--- a/lib/l10n/intl_fa.arb
+++ b/lib/l10n/intl_fa.arb
@@ -32,7 +32,7 @@
   "users": "کاربران",
   "language": "زبان",
   "hot": "داغ",
-  "new": "تازه",
+  "new_": "تازه",
   "top": "بالاترین",
   "chat": "گپ",
   "admin": "مدیر"
