--- a/lib/l10n/intl_fi.arb
+++ b/lib/l10n/intl_fi.arb
@@ -44,7 +44,7 @@
   "theme": "Teema",
   "language": "Kieli",
   "hot": "Kuumat",
-  "new": "Uudet",
+  "new_": "Uudet",
   "old": "Vanhat",
   "top": "Parhaimmat",
   "chat": "Chat",
