--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -48,7 +48,7 @@
   "theme": "Thème",
   "language": "Langue",
   "hot": "Tendances",
-  "new": "Nouveaux",
+  "new_": "Nouveaux",
   "old": "Ancien",
   "top": "Top",
   "chat": "Chat",
