--- a/lib/l10n/intl_ga.arb
+++ b/lib/l10n/intl_ga.arb
@@ -48,7 +48,7 @@
   "theme": "Téama",
   "language": "Teanga",
   "hot": "Te",
-  "new": "Nua",
+  "new_": "Nua",
   "old": "Sean",
   "top": "Barr",
   "chat": "Comhrá",
