--- a/lib/l10n/intl_hu.arb
+++ b/lib/l10n/intl_hu.arb
@@ -44,7 +44,7 @@
   "theme": "Téma",
   "language": "Nyelv",
   "hot": "Népszerű",
-  "new": "Új",
+  "new_": "Új",
   "old": "Régi",
   "top": "Legjobb",
   "chat": "Csevegés",
