--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -48,7 +48,7 @@
   "theme": "Tema",
   "language": "Lingua",
   "hot": "Popolari",
-  "new": "Nuovi",
+  "new_": "Nuovi",
   "old": "Vecchi",
   "top": "Migliori",
   "chat": "Chat",
