--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -47,7 +47,7 @@
   "theme": "テーマ",
   "language": "言語",
   "hot": "人気",
-  "new": "新しい順",
+  "new_": "新しい順",
   "old": "古い順",
   "top": "トップ",
   "chat": "会話",
