--- a/lib/l10n/intl_ka.arb
+++ b/lib/l10n/intl_ka.arb
@@ -44,7 +44,7 @@
   "theme": "საიტის თემა",
   "language": "ენა",
   "hot": "ცხელი",
-  "new": "ახალი",
+  "new_": "ახალი",
   "old": "ძველი",
   "top": "ტოპ",
   "chat": "ჩეტი",
