--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -48,7 +48,7 @@
   "theme": "테마",
   "language": "언어",
   "hot": "인기있는",
-  "new": "새로운",
+  "new_": "새로운",
   "old": "오래된",
   "top": "Top",
   "chat": "대화",
