--- a/lib/l10n/intl_nl.arb
+++ b/lib/l10n/intl_nl.arb
@@ -44,7 +44,7 @@
   "theme": "Thema",
   "language": "Taal",
   "hot": "Populair",
-  "new": "Nieuw",
+  "new_": "Nieuw",
   "old": "Oud",
   "top": "Top",
   "chat": "Praat",
