--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -50,7 +50,7 @@
   "theme": "Motyw",
   "language": "Język",
   "hot": "Popularne",
-  "new": "Nowe",
+  "new_": "Nowe",
   "old": "Stare",
   "top": "Najpopularniejsze",
   "chat": "Czat",
