--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -48,7 +48,7 @@
   "theme": "Tema",
   "language": "Idioma",
   "hot": "Popular",
-  "new": "Novo",
+  "new_": "Novo",
   "old": "Velho",
   "top": "Top",
   "chat": "Chat",
