--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -48,7 +48,7 @@
   "theme": "Визуальная тема",
   "language": "Язык",
   "hot": "Популярно",
-  "new": "Новое",
+  "new_": "Новое",
   "old": "Старое",
   "top": "Лучшее",
   "chat": "Чат",
