--- a/lib/l10n/intl_sq.arb
+++ b/lib/l10n/intl_sq.arb
@@ -44,7 +44,7 @@
   "theme": "Pamja",
   "language": "Gjuha",
   "hot": "Popullore",
-  "new": "Të rejat",
+  "new_": "Të rejat",
   "old": "Të vjetrat",
   "top": "Më të pëqlyerat",
   "chat": "Chat",
