--- a/lib/l10n/intl_sv.arb
+++ b/lib/l10n/intl_sv.arb
@@ -48,7 +48,7 @@
   "theme": "Utseende",
   "language": "Språk",
   "hot": "Hett",
-  "new": "Nytt",
+  "new_": "Nytt",
   "old": "Gammalt",
   "top": "Topp",
   "chat": "Chatta",
