--- a/lib/l10n/intl_tr.arb
+++ b/lib/l10n/intl_tr.arb
@@ -44,7 +44,7 @@
   "theme": "Tema",
   "language": "Dil",
   "hot": "Flaş",
-  "new": "Yeni",
+  "new_": "Yeni",
   "old": "Eski",
   "top": "En iyiler",
   "chat": "Sohbet",
