--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -44,7 +44,7 @@
   "theme": "Візуальна тема",
   "language": "Мова",
   "hot": "Популярне",
-  "new": "Нове",
+  "new_": "Нове",
   "old": "Старе",
   "top": "Найкраще",
   "chat": "Чат",
