--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -48,7 +48,7 @@
   "theme": "主题",
   "language": "语言",
   "hot": "最热",
-  "new": "最新",
+  "new_": "最新",
   "old": "最早",
   "top": "推荐",
   "chat": "聊天",
