--- a/lib/l10n/untranslated.json
+++ b/lib/l10n/untranslated.json
@@ -203,7 +203,7 @@
     "theme",
     "language",
     "hot",
-    "new",
+    "new_",
     "old",
     "top",
     "chat",
@@ -255,7 +255,7 @@
     "theme",
     "language",
     "hot",
-    "new",
+    "new_",
     "old",
     "top",
     "chat",
@@ -318,7 +318,7 @@
     "theme",
     "language",
     "hot",
-    "new",
+    "new_",
     "old",
     "top",
     "chat",
@@ -431,7 +431,7 @@
     "theme",
     "language",
     "hot",
-    "new",
+    "new_",
     "old",
     "top",
     "chat",
@@ -519,7 +519,7 @@
     "theme",
     "language",
     "hot",
-    "new",
+    "new_",
     "old",
     "top",
     "chat",
@@ -591,7 +591,7 @@
     "theme",
     "language",
     "hot",
-    "new",
+    "new_",
     "old",
     "top",
     "chat",
@@ -689,7 +689,7 @@
     "theme",
     "language",
     "hot",
-    "new",
+    "new_",
     "old",
     "top",
     "chat",
@@ -738,7 +738,7 @@
     "communities",
     "users",
     "hot",
-    "new",
+    "new_",
     "old",
     "top",
     "admin"
